force-app/main/default/objects/Recibos_de_la_negociaci_n__c/Recibos_de_la_negociaci_n__c.object-meta.xml
<CustomObject>
    <label>Recibo de la negociación</label>
    <nameField>
        <displayFormat>RN-{000000000}</displayFormat>
        <label>Nombre de Recibos de la negociación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recibos de la negociación</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>