force-app/main/default/objects/Recibos_de_la_negociaci_n__c/fields/C_digo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_cliente__c</fullName>
    <formula>Informe_de_Negociaci_n__r.Cuenta__r.CodigoCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de cliente</label>
    <type>Text</type>
</CustomField>