force-app/main/default/objects/Recibos_de_la_negociaci_n__c/fields/Informe_de_Negociaci_n__c.field-meta.xml
<CustomField>
    <fullName>Informe_de_Negociaci_n__c</fullName>
    <label>Informe de Negociación</label>
    <referenceTo>Informe_de_Negociaci_n__c</referenceTo>
    <relationshipLabel>Recibos de la negociación</relationshipLabel>
    <relationshipName>Recibos_de_la_negociaci_n</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>