force-app/main/default/objects/Recibos_de_la_negociaci_n__c/fields/Monto_aplicado_a_la_negociaci_n__c.field-meta.xml
<CustomField>
    <fullName>Monto_aplicado_a_la_negociaci_n__c</fullName>
    <label>Monto aplicado a la negociación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>