force-app/main/default/objects/Recibos_de_la_negociaci_n__c/fields/NIO__c.field-meta.xml
<CustomField>
    <fullName>NIO__c</fullName>
    <formula>if (ISPICKVAL(CurrencyIsoCode , &apos;USD&apos;),  Monto_aplicado_a_la_negociaci_n__c * Informe_de_Negociaci_n__r.Tasa_Cambio__c , Monto_aplicado_a_la_negociaci_n__c * 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>