force-app/main/default/objects/Recibos_de_la_negociaci_n__c/fields/Numero_de_recibo__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_recibo__c</fullName>
    <formula>Recibos__r.NumeroRecibido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de recibo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>