force-app/main/default/objects/Recibos_de_la_negociaci_n__c/fields/Recibos__c.field-meta.xml
<CustomField>
    <fullName>Recibos__c</fullName>
    <label>Recibos</label>
    <referenceTo>AllRecibidos__c</referenceTo>
    <relationshipLabel>Recibos de la negociación</relationshipLabel>
    <relationshipName>Recibos_de_la_negociaci_n</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>