force-app/main/default/objects/Recibos_de_la_negociaci_n__c/fields/Saldo_disponible__c.field-meta.xml
<CustomField>
    <fullName>Saldo_disponible__c</fullName>
    <formula>Recibos__r.Saldo_disponible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo disponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>