force-app/main/default/objects/Recibos_de_la_negociaci_n__c/fields/Saldo_total_aplicado__c.field-meta.xml
<CustomField>
    <fullName>Saldo_total_aplicado__c</fullName>
    <formula>Recibos__r.Saldo_aplicado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo total aplicado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>