force-app/main/default/objects/Recibos_de_la_negociaci_n__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>C_digo_de_cliente__c</columns>
    <columns>Monto_aplicado_a_la_negociaci_n__c</columns>
    <columns>Saldo_disponible__c</columns>
    <columns>Saldo_total_aplicado__c</columns>
    <columns>Saldo__c</columns>
    <columns>Informe_de_Negociaci_n__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>C_digo_de_cliente__c</field>
        <operation>equals</operation>
        <value>4082154</value>
    </filters>
    <label>Todos</label>
</ListView>